# heas

./: .gitignore  AUDIT_MANIFEST.txt  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTIONS_SUMMARY.txt  HEAS_CONTRIBUTIONS.md  HEAS_WSC_V4_final.fls  HEAS_review_session_report.md  MANIFEST.in  README.md  REVISIONS_ROUND3.txt  package-lock.json  package.json  paper.bib  paper.md  playwright.config.js  pyproject.toml  research-group-memory.md  vitest.config.js
HEAS draft V2/: 00_OUTLINE.md  01_abstract.md  02_introduction.md  05_case_studies.md  06_evaluation.md  07_conclusion.md  08_reviewer_qa.md  10_writing_notes.md  README.md  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  references.bib  wscpaperproc.cls
HEAS draft V3/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
HEAS_Preprint/: reference.bib
Old archive/: AUDIT_EXECUTIVE_SUMMARY.txt  BIB_AUDIT_REPORT.md  BIB_FINAL_REPORT.md  BIB_VERIFICATION_REPORT.md  EDITOR_DECISION_R3.md  EDITOR_ITEMS_RESOLUTION.txt  HEAS_RR2_full_cycle_report.md  HEAS_RR2_session_report.md  HEAS_V01_TODO.md  HEAS_V03_TODO.md  HEAS_V04_WORKBRIEF.md  HEAS_WSC_V4_final.fdb_latexmk  HEAS_WSC_V5_depacked.tex  HEAS_WSC_V6_submission_ready.tex  MANIFEST.txt  PATCH_ROUND3.tex  PROOFREAD_REPORT_v0.1.md  QUICK_REFERENCE.txt  README_ROUND3_REVISIONS.md  REVISIONS_SUMMARY.md  supervisor_proofreading_v03.md
V4 submission/: paper.bbl  paper.blg  paper.tex
WSC2026_Template/: readme.txt  wsc26paper.aux  wsc26paper.tex  wsc26style.tex
docs/: 404.html  PLAYGROUND_LIMITATIONS.md  PLAYGROUND_REPRODUCIBILITY.md  PLAYGROUND_USER_GUIDE.md  SECURITY_CHECKLIST.md  _headers  app.js  disclaimer.html  index.html  privacy.html  result_interpretation.md  result_interpretation_template.md  sitemap.xml  styles.css  terms.html
experiments/: DIAGNOSIS.md  __init__.py  agg_consistency_experiment.py  agg_consistency_results.json  agg_consistency_results_stage2.json  baseline_comparison.py  common.py  eco_stats.py  ent_stats.py  exp_a_enterprise_n20.py  exp_b_bimodal_ablation.py  exp_c_true_ood.py  generate_paper_figures.py  mesa_eco.py  mesa_eco_util.py  multi_algorithm_invariance_results.json  multi_algorithm_prespec.md  near_tie_tournament.py  noise_aware.py  (+7 more)
(+1037 files in other folders)
