[project]
name = "heas"
version = "0.2.0"
description = "HEAS: Hierarchical Evolutionary Agent Simulation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Ruiyu Zhang", email = "ruiyuzh@connect.hku.hk" }
]
keywords = ["evolutionary computation", "agent-based simulation", "hierarchical systems", "multi-objective optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "tqdm>=4.66",
    "deap>=1.3",
    "mesa>=2.1",
    "matplotlib>=3.6",
]

[tool.setuptools]
license-files = ["LICENSE", "COPYING"]
